added new songs

--- a/index.html
+++ b/index.html
@@ -279,13 +279,35 @@
         <td>MIMI</td>
       </tr>
     </table>
-    <div class="gekiatsu">
-      <p>※ 夏背さんはOrangestarさんの奥さんとかいう激アツ展開</p>
-    </div>
+    <p class="gekiatsu">※ 夏背さんはOrangestarさんの奥さんとかいう激アツ展開</p>
 
     <h2 id="forMe">for <a href="#forMe">me</a></h2>
     <table>
       <tr><td colspan="3" class="unitName">Virtual Singer</td></tr>
+      <tr>
+        <td>magic number</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=fzRWpcvPJYo">original MV</a></td>
+      </tr>
+      <tr>
+        <td>alive</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=y7RfoyBJxCg">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Brand New Day</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=2KrCmAWrrKI">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Last Score</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=zAWu9BK_V5M">original MV</a></td>
+      </tr>
+      <tr>
+        <td>未完成讃歌</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=PmRtXlhzgAU">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Even so, it's okay</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=1AS0Mve80jQ">original MV</a></td>
+      </tr>
       <tr>
         <td>いちにのさんで</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=mgfDwtVI5C8">original MV</a></td>
@@ -293,6 +315,14 @@
       <tr>
         <td>陽だまりのセツナ</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=D2gWpqM2GFQ">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Where shall we go?</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=jyI9Xn67SHA">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Eternal Aria</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=GHzCL_6v87Y">original MV</a></td>
       </tr>
       <tr>
         <td>Melt</td>
@@ -303,16 +333,32 @@
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=E4tIHBx7bqc">original MV</a></td>
       </tr>
       <tr>
+        <td>Because You're Here</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=ygY2qObZv24">original MV</a></td>
+      </tr>
+      <tr>
         <td>ワールズエンド・<span class="nowrap">ダンスホール</span></td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=ZB75e7vzX0I">original MV</a></td>
+      </tr>
+      <tr>
+        <td>I want to be your heart</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=hZFBTnzKa54">original MV</a></td>
       </tr>
       <tr>
         <td>Miku</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=NocXEwsJGOQ">original MV</a></td>
       </tr>
       <tr>
+        <td>Thousand-Year Solo</td>
+        <td colspan="2"><a target="_blank" href="https://www.nicovideo.jp/watch/sm3122624"><span class="landscape">original&nbsp;</span>MV(ニコニコ動画)</a></td>
+      </tr>
+      <tr>
         <td>Paradichlorobenzen</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=aTUfwLAVSHE">original MV</a></td>
+      </tr>
+      <tr>
+        <td>あったかいと</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=RsmJ--RNgE8">original MV</a></td>
       </tr>
       <tr>
         <td>Dawn and Firefly</td>
@@ -351,6 +397,11 @@
         <td><a target="_blank" href="https://www.youtube.com/watch?v=sgZjbk9eH6g">□□□□</a></td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=MxT59XJXMnU">□□□□</a></td>
       </tr>
+      <tr>
+        <td>Be The MUSIC!</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=m1I3XWZ4eUs">□□□□</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=mZI9HEVh6Yw">□□□□</a></td>
+      </tr>
 
       <tr><td colspan="3" class="unitName">Leo/need</td></tr>
       <tr>
@@ -362,6 +413,11 @@
         <td>needLe</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=buoYwfZG4vQ">□□□□</a></td>
         <td class="tac">-</td>
+      </tr>
+      <tr>
+        <td>「１」</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=fobQOAOAdoE">□□□□</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=_GdIO1AANg4">□□□□</a></td>
       </tr>
       <tr>
         <td>Pulse of The Meteor</td>
@@ -416,16 +472,33 @@
         <td><a target="_blank" href="https://www.youtube.com/watch?v=g6hGN-WNig0">□□□□</a></td>
       </tr>
       <tr>
+        <td rowspan="2">アサガオの散る頃に</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=ugs4oVUNZ-o">feat.<span class="landscape">&nbsp;</span><span class="nowrap">初音ミク</span></a></td>
+        <td rowspan="2" class="tac">-</td>
+      </tr>
+      <tr><td><a target="_blank" href="https://www.youtube.com/watch?v=VP7FM1yyMpU">feat. ツユ</a></td></tr>
+      <tr>
         <td rowspan="2">Lost and Found</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=l7tqkjBKjkw"><span class="smartphone">original</span><span class="landscape">original ver.</span></a></td>
         <td rowspan="2" class="tac">-</td>
       </tr>
       <tr><td class="priority"><a target="_blank" href="https://www.youtube.com/watch?v=aJxGc2LRvIo">Band<span class="landscape">&nbsp;remaster ver.</span></a></td></tr>
       <tr>
+        <td>Calc.</td>
+        <td><a target="_blank" href="https://www.nicovideo.jp/watch/sm12050471"><span class="smartphone">ﾆｺﾆｺ</span><span class="landscape">ニコニコ</span>動画</a></td>
+        <td class="tac">-</td>
+      </tr>
+      <tr>
         <td>天ノ弱</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=2-zPY0vrpjQ">□□□□</a></td>
         <td class="tac">-</td>
       </tr>
+      <tr>
+        <td rowspan="2">Attract Light</td>
+        <td><a target="_blank" href="https://www.nicovideo.jp/watch/sm34963216"><span class="smartphone">ﾆｺﾆｺ</span><span class="landscape">ニコニコ</span>動画</a></td>
+        <td rowspan="2" class="tac">-</td>
+      </tr>
+      <tr><td><a target="_blank" href="https://www.youtube.com/watch?v=AVRF8B504GE">feat.<span class="landscape">&nbsp;</span><span class="nowrap">ゆある</span></a></td></tr>
       <tr>
         <td>glow</td>
         <td><a target="_blank" href="https://www.nicovideo.jp/watch/sm11209477"><span class="smartphone">ﾆｺﾆｺ</span><span class="landscape">ニコニコ</span>動画</a></td>
@@ -467,6 +540,11 @@
         <td>マシュマリー</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=qtuX4cHk-vE">□□□□</a></td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=VL4-H_O2MNo">□□□□</a></td>
+      </tr>
+      <tr>
+        <td>少女レイ</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=JW3N-HvU0MA">□□□□</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=3VT85q-E-UU">□□□□</a></td>
       </tr>
 
       <tr><td colspan="3" class="unitName">Vivid BAD SQUAD</td></tr>
@@ -767,7 +845,7 @@
           <td class="priorityCenter">Aug. 31</td>
           <td>
             <p>updated styles;</p>
-            <p>added『Rocket Cider』『Comet Honeymoon』for me</p>
+            <p>added『Rocket Cider』and『Comet Honeymoon』for me</p>
           </td>
         </tr>
         <tr>
@@ -791,17 +869,23 @@
           <td class="priorityCenter">Sep. 5</td>
           <td>
             <p>updated styles;</p>
-            <p>added『街』『アイロニ』for me</p>
+            <p>added『街』and『アイロニ』for me</p>
           </td>
         </tr>
         <tr>
           <td class="priorityCenter">4.1</td>
           <td class="priorityCenter">Sep. 6</td>
           <td>
-            <p>added『Melt』『Blessing』『METEOR』『マシュマリー』and URLs of the original version of『from Y to Y』『下剋上』『カナデトモスソラ』for me;</p>
+            <p>added『Melt』『Blessing』『METEOR』and『マシュマリー』for me;</p>
+            <p>added URLs of the original version of『from Y to Y』『下剋上』and『カナデトモスソラ』for me;</p>
             <p>replaced some titles of songs for me with their English titles;</p>
             <p>fixed styles</p>
           </td>
+        </tr>
+        <tr>
+          <td class="priorityCenter">4.2</td>
+          <td class="priorityCenter">Sep. 8</td>
+          <td>added『magic number』『alive』『Brand New Day』『Last Score』『未完成讃歌』『Even so, it's okay』『Where shall we go?』『Eternal Aria』『Because You're Here』『I want to be your heart』『Thousand-Year Solo』『あったかいと』『Be The MUSIC!』『「１」』『アサガオの散る頃に』『Calc.』『Attract Light』and『少女レイ』for me</td>
         </tr>
       </table>
     </div>
