fixed typos and added new songs

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <td>可不</td>
         <td>MIMI</td>
       </tr>
-      <!-- <tr><td colspan="3" class="unitName">25時、ナイトコートで。</td></tr> -->
+      <!-- <tr><td colspan="3" class="unitName">25時、ナイトコードで。</td></tr> -->
     </table>
     <p class="gekiatsu">※ 夏背さんはOrangestarさんの奥さんとかいう激アツ展開</p>
 
@@ -345,12 +345,34 @@
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=hZFBTnzKa54">original MV</a></td>
       </tr>
       <tr>
+        <td>Cendrillon</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=YE_S-OPHP8o">original<span class="landscape">&nbsp;MV</span></a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=mXfnndMDFPs">10th anniv<span class="smartphone">.</span><span class="landscape">ersary</span></a></td>
+      </tr>
+      <tr>
+        <td>Colorful Marine Snow</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=NwSriMki_UA">original MV</a></td>
+      </tr>
+      <tr>
         <td>Miku</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=NocXEwsJGOQ">original MV</a></td>
       </tr>
       <tr>
+        <td>DUNE</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=AS4q9yaWJkI">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Luka Luka ★ Night Fever</td>
+        <td><a target="_blank" href="https://www.nicovideo.jp/watch/sm6119955">original<span class="butLandscape">&nbsp;MV(ニコニコ動画)</span><span class="smartphone onlyLandscape nowrap">(ﾆｺﾆｺ動画)</span></a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=6m_a2hpSbm8">2015ver.</a></td>
+      </tr>
+      <tr>
         <td>Thousand-Year Solo</td>
         <td colspan="2"><a target="_blank" href="https://www.nicovideo.jp/watch/sm3122624"><span class="landscape">original&nbsp;</span>MV(ニコニコ動画)</a></td>
+      </tr>
+      <tr>
+        <td>Double Lariat</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=hC8KrIY8qT4">original MV</a></td>
       </tr>
       <tr>
         <td>Paradichlorobenzen</td>
@@ -695,7 +717,7 @@
         <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">□□□□</a></td>
       </tr>
       
-      <tr><td colspan="3" class="unitName">25時、ナイトコートで。</td></tr>
+      <tr><td colspan="3" class="unitName">25時、ナイトコードで。</td></tr>
       <tr>
         <td class="separator">title</td>
         <td class="separator"><span class="landscape">original&nbsp;</span>MV</td>
@@ -886,6 +908,14 @@
           <td class="priorityCenter">4.2</td>
           <td class="priorityCenter">Sep. 8</td>
           <td>added『magic number』『alive』『Brand New Day』『Last Score』『未完成讃歌』『Even so, it's okay』『Where shall we go?』『Eternal Aria』『Because You're Here』『I want to be your heart』『Thousand-Year Solo』『あったかいと』『Be The MUSIC!』『「１」』『アサガオの散る頃に』『Calc.』『Attract Light』and『少女レイ』for me</td>
+        </tr>
+        <tr>
+          <td class="priorityCenter">4.3</td>
+          <td class="priorityCenter">Sep. 11</td>
+          <td>
+            <p>fixed typos;</p>
+            <p>added『Cendrillon』『Colorful Marine Snow』『DUNE』『Luka Luka ★ Night Fever』『Double Lariat』for me</p>
+          </td>
         </tr>
       </table>
     </div>
