edited mistakes and added new songs

--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=aTUfwLAVSHE">original MV</a></td>
       </tr>
       <tr>
+        <td>星屑ユートピア</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=syk1f6Dj82E">original MV</a></td>
+      </tr>
+      <tr>
         <td>あったかいと</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=RsmJ--RNgE8">original MV</a></td>
       </tr>
@@ -392,8 +396,29 @@
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=AH5_sKwDw1E">original MV</a></td>
       </tr>
       <tr>
+        <td>Copycat</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=Q_QEPrkwZ-Q">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Rainy Snowdrop</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=XQh5Uf5itkI">original MV</a></td>
+      </tr>
+      <tr>
         <td>Heart</td>
         <td colspan="2"><a target="_blank" href="https://www.nicovideo.jp/watch/sm2500648"><span class="landscape">original&nbsp;</span>MV(ニコニコ動画)</a></td>
+      </tr>
+      <tr>
+        <td>Strobe Last</td>
+        <td colspan="2"><a target="_blank" href="https://www.nicovideo.jp/watch/nm13359285"><span class="landscape">original&nbsp;</span>MV(ニコニコ動画)</a></td>
+      </tr>
+      <tr>
+        <td>39</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=ecU_uJRzhfk">original MV</a></td>
+      </tr>
+      <tr>
+        <td>Highlight</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=3lce-CE50SE">MIKU EXPO</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=AYUNaQaDfa8">MV</a></td>
       </tr>
       <tr>
         <td>トラッシュ・アンド・<span class="nowrap">トラッシュ！</span></td>
@@ -403,6 +428,18 @@
         <td>METEOR</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=2kZVEUGLgy4">original MV</a></td>
       </tr>
+      <tr>
+        <td>Sharing The World</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=GRc_Vz6kEjc"><span class="smartphone">ENG.</span><span class="landscape">English ver.</span></a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=GsMqQqb4AvI"><span class="smartphone">JPN.</span><span class="landscape">Japanese ver.</span></a></td>
+      </tr>
+      <tr>
+        <td rowspan="2">Blue Star</td>
+        <td class="landscape noBorder"><a target="_blank" href="https://www.youtube.com/watch?v=fkgaFnf1Ae8">MIKU EXPO</a></td>
+        <td class="smartphone" rowspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=fkgaFnf1Ae8">MIKU EXPO</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=sK92X82T3Sk">MV</a></td>
+      </tr>
+        <tr><td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=xSnuVnOZd1U">八王子P</a></td></tr>
       <tr>
         <td>Afterglow</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=WHzOugrtQsk">original MV</a></td>
@@ -836,8 +873,8 @@
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=3x9_LpnRtAk"><span class="landscape">original&nbsp;</span>MV</a></td>
       </tr>
       <tr>
-        <td>Comet Honeymoon</td>
-        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=wCj04kwAFX8"><span class="landscape">original&nbsp;</span>MV</a></td>
+        <td>Planet Loop</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=LNX0GsjBP2w"><span class="landscape">original&nbsp;</span>MV</a></td>
       </tr>
     </table>
 
@@ -914,7 +951,15 @@
           <td class="priorityCenter">Sep. 11</td>
           <td>
             <p>fixed typos;</p>
-            <p>added『Cendrillon』『Colorful Marine Snow』『DUNE』『Luka Luka ★ Night Fever』『Double Lariat』for me</p>
+            <p>added『Cendrillon』『Colorful Marine Snow』『DUNE』『Luka Luka ★ Night Fever』and『Double Lariat』for me</p>
+          </td>
+        </tr>
+        <tr>
+          <td class="priorityCenter">4.4</td>
+          <td class="priorityCenter">Sep. 13</td>
+          <td>
+            <p>replaced『Comet Honeymoon』with『Planet Loop』for me;</p>
+            <p>added『星屑ユートピア』『Copycat』『Rainy Snowdrop』『Strobe Last』『39』『Highlight』『Sharing The World』and『Blue Star』for me</p>
           </td>
         </tr>
       </table>
