removed and added some URLs

--- a/index.html
+++ b/index.html
@@ -353,11 +353,6 @@
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=hZFBTnzKa54">original MV</a></td>
       </tr>
       <tr>
-        <td>Cendrillon</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=YE_S-OPHP8o">original<span class="landscape">&nbsp;MV</span></a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=mXfnndMDFPs">10th anniv<span class="smartphone">.</span><span class="landscape">ersary</span></a></td>
-      </tr>
-      <tr>
         <td>Colorful Marine Snow</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=NwSriMki_UA">original MV</a></td>
       </tr>
@@ -368,11 +363,6 @@
       <tr>
         <td>DUNE</td>
         <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=AS4q9yaWJkI">original MV</a></td>
-      </tr>
-      <tr>
-        <td>Luka Luka ★ Night Fever</td>
-        <td><a target="_blank" href="https://www.nicovideo.jp/watch/sm6119955">original<span class="butLandscape">&nbsp;MV(ニコニコ動画)</span><span class="smartphone onlyLandscape nowrap">(ﾆｺﾆｺ)</span></a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=6m_a2hpSbm8">2015ver.</a></td>
       </tr>
       <tr>
         <td>Thousand-Year Solo</td>
@@ -502,7 +492,7 @@
       <tr>
         <td>needLe</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=buoYwfZG4vQ">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=VLG4ItqUPRY">Topic</a></td>
       </tr>
       <tr>
         <td>「１」</td>
@@ -527,12 +517,12 @@
       <tr>
         <td>ROKI</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=Xg-qfsKN2_E">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=V-7cDTePL8E">Topic</a></td>
       </tr>
       <tr>
         <td rowspan="2">Run into the blue！</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=_qbKRIwkTCc">Band<span class="landscape">&nbsp;ver.</span></a></td>
-        <td rowspan="2" class="tac"> - </td>
+        <td rowspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=3IPCAdF1BUg">Topic</a></td>
       </tr>
       <tr>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=gSBBE_E1q-4">original<span class="landscape">&nbsp;ver.</span></a></td>
@@ -545,7 +535,7 @@
       <tr>
         <td>from Y to Y</td>
         <td><a target="_blank" href="https://www.nicovideo.jp/watch/sm6529016"><span class="smartphone">ﾆｺﾆｺ</span><span class="landscape">ニコニコ</span>動画</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=rip2cJa7nPE">Topic</a></td>
       </tr>
       <tr>
         <td rowspan="2">Lost and Found</td>
@@ -599,7 +589,7 @@
       <tr>
         <td>The Peachy Key</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=sAUdWpemfGw">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=3U9zLyDvo4Q">Topic</a></td>
       </tr>
       <tr>
         <td>Milk Crown on Sonnetica</td>
@@ -646,12 +636,12 @@
       <tr>
         <td>街</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=rmw_4vVvp-0">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=_J9ukF0GMKg">Topic</a></td>
       </tr>
       <tr>
         <td>Into Suspended Animation</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=POD_KGL2aqQ">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=Ka3AFz5Dx30">Topic</a></td>
       </tr>
       <tr>
         <td>下剋上</td>
@@ -666,7 +656,7 @@
       <tr>
         <td class="smartphonePriority" id="noBorderBottom">BRING IT ON<span class="landscape landscapeNowrap">&nbsp;(Inferiority superiority)</span></td>
         <td rowspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=oEkGC2HV7rc">□□□□</a></td>
-        <td class="tac" rowspan="2">-</td>
+        <td rowspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=Tu14oNEPaoc">Topic</a></td>
       </tr>
       <tr><td class="smartphone priority smartphonePriority" id="noBorderTop">(Inferiority superiority)</td></tr>
       <tr>
@@ -677,7 +667,7 @@
       <tr>
         <td>Children Record</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=oh9UGmqtdMg">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=KUsk40NYYHA">Topic</a></td>
       </tr>
       <tr>
         <td>PaⅢ.SENSATION</td>
@@ -699,25 +689,17 @@
       <tr>
         <td>The World Hasn't<span class="landscape">&nbsp;</span><span class="smartphone"><br></span>Even Started Yet</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=1s8NNPgdl5g">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=uQJMw-p-X0M">Topic</a></td>
       </tr>
       <tr>
         <td>Becoming Potatoes</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=Dun11cIEo9s">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=zNrNj-vnGEk">Topic</a></td>
       </tr>
       <tr>
-        <td class="priority">Once Upon a Dream</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=S84mvlha5Fc">□□□□</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=1RoDmN9n8xE">□□□□</a></td>
-      </tr>
-      <tr>
-        <td rowspan="2">Unthinkable Wonders</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=dBQg24mx45Y">original<span class="landscape">&nbsp;ver.</span></a></td>
-        <td rowspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=ZfVWqos23xs">□□□□</a></td>
-      </tr>
-      <tr>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=cNJk9tpcL3M">Self Remix</a></td>
+        <td>Unthinkable Wonders</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=dBQg24mx45Y">□□□□</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=ZfVWqos23xs">□□□□</a></td>
       </tr>
       <tr>
         <td>Glory Steady Go!</td>
@@ -727,17 +709,17 @@
       <tr>
         <td class="priority">Showtime Ruler</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=uDBVetc5JKo">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=eEpAwTHrmfs">Topic</a></td>
       </tr>
       <tr>
         <td>Niccori^^ Survey Team Theme</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=C_Fc1x_aeFQ">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=pBOSSGKuf1U">Topic</a></td>
       </tr>
       <tr>
         <td>Starry Sky Melody</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=VznMASce0CM">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=UHa1gm6XSoA">Topic</a></td>
       </tr>
       <tr>
         <td>What Sort of Ending Are You Wishing For?</td>
@@ -761,8 +743,8 @@
       </tr>
       <tr>
         <td>Tin Plate Dance</td>
-        <td><a target="_blank" href="https://www.nicovideo.jp/watch/sm20296308"><span class="smartphone">ﾆｺﾆｺ</span><span class="landscape">ニコニコ</span>動画</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=6EuR6FuOXXw">□□□□</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=CYPOmNpm1Os">Topic</a></td>
       </tr>
       <tr>
         <td>Positive ☆ Dance Time</td>
@@ -772,7 +754,7 @@
       <tr>
         <td>As You Like It</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=nROvY9uiYYk">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=bQGTyl6V178">Topic</a></td>
       </tr>
       <tr>
         <td>1 2 funclub</td>
@@ -807,7 +789,7 @@
       <tr>
         <td>Future read as "Regret"</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=r2OS97F6P_U">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jUyCN1229Ws">Topic</a></td>
       </tr>
       <tr>
         <td>カナデトモスソラ</td>
@@ -817,7 +799,7 @@
       <tr>
         <td>Reborn</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=purlnb5K_jM">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=qs6EKSnihh8">Topic</a></td>
       </tr>
       <tr>
         <td>Lower one's eyes</td>
@@ -827,7 +809,7 @@
       <tr>
         <td>Nomad</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=mKfwzOgorXs">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=5uKm9Srhuz4">Topic</a></td>
       </tr>
       <tr>
         <td>君の夜をくれ</td>
@@ -862,7 +844,7 @@
       <tr>
         <td>Venom</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=oRJBwaZ59fQ">□□□□</a></td>
-        <td class="tac">-</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=Em6KO0tZqNU">Topic</a></td>
       </tr>
       <tr>
         <td>Meru</td>
@@ -1021,7 +1003,7 @@
           <td class="priorityCenter">5.0</td>
           <td class="priorityCenter">Nov. 23</td>
           <td>
-            <p>changed the titles of『陽だまりのセツナ』『星屑ユートピア』『あったかいと』『番凩』『星を繋ぐ』『ウミユリ海底譚』『天ノ弱』『フロート・プランナー』『ミルククラウン・オン・ソーネチカ』『マシュマリー』『少女レイ』『チルドレンレコード』『potatoになっていく』『ワンスアポンアドリーム』『トンデモワンダーズ』『ショウタイム・ルーラー』『ブリキノダンス』『悔やむと書いてミライ』『再生』『ロウワー』『ノマド』『ベノム』『泥中に咲く』『アイロニ』and『心做し』into『A Moment of Sunshine』『Stardust Utopia』『Attakaito』『Paired Wintry Winds』『Connect the Stars』『Tale of the Deep-sea Lily』『A Born Coward』『Float Planner』『Milk Crown on Sonnetica』『Marshmary』『Ghost Girl』『Children Record』『Becoming Potatoes』『Once Upon a Dream』『Unthinkable Wonders』『Showtime Ruler』『Tin Plate Dance』『Future read as "Regret"』『Reborn』『Lower one's eyes』『Nomad』『Venom』『Blooming in the Mud』『Irony』and『Kokoronashi』for me;</p>
+            <p>replaced the titles of『陽だまりのセツナ』『星屑ユートピア』『あったかいと』『番凩』『星を繋ぐ』『ウミユリ海底譚』『天ノ弱』『フロート・プランナー』『ミルククラウン・オン・ソーネチカ』『マシュマリー』『少女レイ』『チルドレンレコード』『potatoになっていく』『ワンスアポンアドリーム』『トンデモワンダーズ』『ショウタイム・ルーラー』『ブリキノダンス』『悔やむと書いてミライ』『再生』『ロウワー』『ノマド』『ベノム』『泥中に咲く』『アイロニ』and『心做し』with『A Moment of Sunshine』『Stardust Utopia』『Attakaito』『Paired Wintry Winds』『Connect the Stars』『Tale of the Deep-sea Lily』『A Born Coward』『Float Planner』『Milk Crown on Sonnetica』『Marshmary』『Ghost Girl』『Children Record』『Becoming Potatoes』『Once Upon a Dream』『Unthinkable Wonders』『Showtime Ruler』『Tin Plate Dance』『Future read as "Regret"』『Reborn』『Lower one's eyes』『Nomad』『Venom』『Blooming in the Mud』『Irony』and『Kokoronashi』for me;</p>
             <p>removed『トラッシュ・アンド・トラッシュ！』『てらてら』『相生』『ray』『Heart Rate ♯0822』『アサガオの散る頃に』『チームメイト』『ひつじがいっぴき』『88☆彡』『命に嫌われている。』and『独りんぼエンヴィー』from the list for me;</p>
             <p>added『名も無き革命』『Blue Planet』『Run into the blue！』『Parsol Cider』『Forward』『Cinema』『Into Suspended Animation』『ECHO』『What Sort of Ending Are You Wishing For?』『Starry sky orchestra』『1 2 funclub』and『Cutlery』for me;</p>
             <p>added URL of Topic version of『the WALL』for me;</p>
@@ -1029,6 +1011,15 @@
             <p>added URL of the other original version of『Blooming in the Mud』for me;</p>
             <p>added URL of SEKAI version of『Gehenna』for me;</p>
             <p>updated styles</p>
+          </td>
+        </tr>
+        <tr>
+          <td class="priorityCenter">5.1</td>
+          <td class="priorityCenter">Dec. 27</td>
+          <td>
+            <p>removed『Cendrillon』『Luka Luka ★ Night Fever』and『Once Upon a Dream』from the list for me;</p>
+            <p>removed URL of self-remix version of『Unthinkable Wonders』from the list for me;</p>
+            <p>added URLs of Topic version of『needLe』『ROKI』『Run into the blue！』『from Y to Y』『The Peachy Key』『街』『Into Suspended Animation』『BRING IT ON (Inferiority superiority)』『Children Record』『The World Hasn't Even Started Yet』『Becoming Potatoes』『Showtime Ruler』『Niccori^^ Survey Team Theme』『Starry Sky Melody』『Tin Plate Dance』『As You Like It』『Future read as "Regret"』『Reborn』『Nomad』and『Venom』for me</p>
           </td>
         </tr>
       </table>
